force-app/main/default/objects/vlocity_ps__CalculationProcedureVariable__c/fields/vlocity_ps__CalculationProcedureVersionId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__CalculationProcedureVersionId__c</fullName>
    <label>Vlocity Calculation Procedure Version</label>
    <referenceTo>vlocity_ps__CalculationProcedureVersion__c</referenceTo>
    <relationshipLabel>Vlocity Calculation Procedure Variables</relationshipLabel>
    <relationshipName>CalculationProcedureVariables</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>