force-app/main/default/objects/vlocity_ps__CalculationProcedureVariable__c/fields/vlocity_ps__DataType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DataType__c</fullName>
    <label>Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>