force-app/main/default/objects/vlocity_ps__CalculationProcedureVariable__c/fields/vlocity_ps__DuplicateAlias__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__DuplicateAlias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Alias</label>
    <type>Checkbox</type>
</CustomField>