force-app/main/default/objects/vlocity_ps__CalculationProcedureVariable__c/fields/vlocity_ps__IsEditable__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__IsEditable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Editable</label>
    <type>Checkbox</type>
</CustomField>