force-app/main/default/objects/vlocity_ps__CalculationProcedureVariable__c/fields/vlocity_ps__MatrixName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__MatrixName__c</fullName>
    <label>Matrix Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>