force-app/main/default/objects/vlocity_ps__CalculationProcedureVariable__c/fields/vlocity_ps__TypeaheadDisplayName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ps__TypeaheadDisplayName__c</fullName>
    <label>Typeahead Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>